@@ -41,7 +41,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getRecentBlockhash", params, RecentBlockhash.class).getValue().getBlockhash();
@@ -92,7 +92,7 @@ public class RpcApi {
 
         params.add(account.toString());
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getBalance", params, ValueLong.class).getValue();
@@ -256,7 +256,7 @@ public class RpcApi {
 
         params.add(dataLength);
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getMinimumBalanceForRentExemption", params, Long.class);
@@ -284,7 +284,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
         return client.call("getBlockHeight", params, Long.class);
     }
@@ -325,7 +325,7 @@ public class RpcApi {
         params.add(address.toString());
         params.add(lamports);
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("requestAirdrop", params, String.class);
@@ -348,7 +348,7 @@ public class RpcApi {
 
         params.add(blockhash);
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getFeeCalculatorForBlockhash", params, FeeCalculatorInfo.class);
@@ -366,7 +366,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getFees", params, FeesInfo.class);
@@ -380,7 +380,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getTransactionCount", params, Long.class);
@@ -392,13 +392,18 @@ public class RpcApi {
 
     public SimulatedTransaction simulateTransaction(String transaction, List<PublicKey> addresses) throws RpcException {
         SimulateTransactionConfig simulateTransactionConfig = new SimulateTransactionConfig(Encoding.base64);
-        simulateTransactionConfig.setAccounts(
-                Map.of(
-                        "encoding",
-                        Encoding.base64,
-                        "addresses",
-                        addresses.stream().map(PublicKey::toBase58).collect(Collectors.toList()))
-        );
+        Map<String, Object> map = new HashMap<>();
+        map.put( "encoding", Encoding.base64.name());
+        map.put("addresses",
+                addresses.stream().map(PublicKey::toBase58).collect(Collectors.toList()));
+//        simulateTransactionConfig.setAccounts(
+//                Map.of(
+//                        "encoding",
+//                        Encoding.base64,
+//                        "addresses",
+//                        addresses.stream().map(PublicKey::toBase58).collect(Collectors.toList()))
+//        );
+        simulateTransactionConfig.setAccounts(map);
         simulateTransactionConfig.setReplaceRecentBlockhash(true);
 
         List<Object> params = new ArrayList<>();
@@ -481,7 +486,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getEpochInfo", params, EpochInfo.class);
@@ -528,7 +533,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getInflationGovernor", params, InflationGovernor.class);
@@ -571,7 +576,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getSlot", params, Long.class);
@@ -585,7 +590,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return new PublicKey(client.call("getSlotLeader", params, String.class));
@@ -638,7 +643,7 @@ public class RpcApi {
         List<Object> params = new ArrayList<>();
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         return client.call("getSupply", params, Supply.class);
@@ -680,7 +685,7 @@ public class RpcApi {
         params.add(tokenAccount.toString());
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         Map<String, Object> rawResult = client.call("getTokenAccountBalance", params, Map.class);
@@ -697,7 +702,7 @@ public class RpcApi {
         params.add(tokenMint.toString());
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         Map<String, Object> rawResult =  client.call("getTokenSupply", params, Map.class);
@@ -714,7 +719,7 @@ public class RpcApi {
         params.add(tokenMint.toString());
 
         if (null != commitment) {
-            params.add(Map.of("commitment", commitment.getValue()));
+            params.add(Collections.singletonMap("commitment", commitment.getValue()));
         }
 
         Map<String, Object> rawResult = client.call("getTokenLargestAccounts", params, Map.class);
