@@ -2,9 +2,7 @@ package org.p2p.solanaj.ws;
 
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.logging.Logger;
 
@@ -84,8 +82,12 @@ public class SubscriptionWebSocketClient extends WebSocketClient {
 
     public void accountSubscribe(String key, NotificationEventListener listener) {
         List<Object> params = new ArrayList<>();
+        Map<String, String> map = new HashMap();
+        map.put("encoding", "jsonParsed");
+        map.put("commitment", Commitment.PROCESSED.getValue());
         params.add(key);
-        params.add(Map.of("encoding", "jsonParsed", "commitment", Commitment.PROCESSED.getValue()));
+//        params.add(Map.of("encoding", "jsonParsed", "commitment", Commitment.PROCESSED.getValue()));
+        params.add(map);
 
         RpcRequest rpcRequest = new RpcRequest("accountSubscribe", params);
 
@@ -109,8 +111,8 @@ public class SubscriptionWebSocketClient extends WebSocketClient {
 
     public void logsSubscribe(String mention, NotificationEventListener listener) {
         List<Object> params = new ArrayList<Object>();
-        params.add(Map.of("mentions", List.of(mention)));
-        params.add(Map.of("commitment", "finalized"));
+        params.add(Collections.singletonMap("mentions", Collections.singletonList(mention)));
+        params.add(Collections.singletonMap("commitment", "finalized"));
 
         RpcRequest rpcRequest = new RpcRequest("logsSubscribe", params);
 
@@ -122,8 +124,8 @@ public class SubscriptionWebSocketClient extends WebSocketClient {
 
     public void logsSubscribe(List<String> mentions, NotificationEventListener listener) {
         List<Object> params = new ArrayList<Object>();
-        params.add(Map.of("mentions", mentions));
-        params.add(Map.of("commitment", "finalized"));
+        params.add(Collections.singletonMap("mentions", mentions));
+        params.add(Collections.singletonMap("commitment", "finalized"));
 
         RpcRequest rpcRequest = new RpcRequest("logsSubscribe", params);
 
